syntax = "proto2";

import "google/protobuf/timestamp.proto";

message WorkoutProto {
  optional string workoutID = 1;
  optional string userID = 2;
  optional string text  = 3;
  optional int32 calories = 4;
  optional google.protobuf.Timestamp dateTimestamp = 5;
}
